# samples_cpp

./: .gitignore  README.md
binary_serialization/: README.md
binary_serialization/binary_serialization_vectors_boost/: CMakeLists.txt
binary_serialization/binary_serialization_vectors_flatbuffers/fb/: vectors.fbs  vectors_generated.h
binary_serialization/binary_serialization_vectors_protobuff3/: README.md
binary_serialization/binary_serialization_vectors_protobuff3/proto/: vectors.proto
boost_vector_binary_serialization/: CMakeLists.txt  README.md  boost_vector_binary_serialization.cpp
cpp/: README.md
cpp/binary_serialization/binary_serialization_vectors_flatbuffers/: CMakeLists.txt  README.md
cpp/binary_serialization/binary_serialization_vectors_hdf5/: CMakeLists.txt  binary_serialization_vectors_hdf5.cpp
cpp/binary_serialization/binary_serialization_vectors_protobuff3/: CMakeLists.txt  binary_serialization_vectors_protobuff3.cpp
cpp/binary_serialization/binary_serialization_vectors_protobuff3/proto/: vectors.pb.cc
cpp/binary_serialization/build-binary_serialization_vectors_hdf5-Desktop_Qt_5_14_1_GCC_64bit-Debug/: CMakeCache.txt  Makefile  bsv_h5  bsv_h5.cbp  cmake_install.cmake  testfile.h5
cpp/binary_serialization/build-binary_serialization_vectors_hdf5-Desktop_Qt_5_14_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-25212c1975f6cbe1f18f.json  cmakeFiles-v1-2a5e414b1d37d7b912e5.json  codemodel-v2-f402d9f2eb38712cfd7d.json  index-2020-02-28T18-49-18-0812.json  target-bsv_h5-Debug-93f8022169bd806e089c.json
cpp/gpu/cuda/: README.md
cpp/gpu/cuda/sample_simple_cuda/: vector_mul_1.cu
cpp/gpu/cuda/sample_thrust_1/: vector_mul_2.cu
cpp/gpu/cuda/sample_thrust_2/: CMakeLists.txt  foo.cpp  foo.cu  foo.hpp  main.cpp
cpp/gpu/cuda/sample_thrust_3/: CMakeLists.txt  cpubase.cpp  cpubase.hpp  gpubase.cu  gpubase.cuh  main.cu  pcom.h
cpp/opencv/capturing/: Makefile  README.md  camera.cpp  connect_to_tx2.sh
cpp/opencv/capturing_rtsp/: CMakeLists.txt  README.md  main.cpp  opencv_install_cpu.sh  opencv_install_cpu_static.sh  opencv_install_gpu.sh
cpp/opencv/tx2_capturing/: camera.cpp
cpp/opengl/: Makefile
flatbuffers_vector_binary_serialization/: CMakeLists.txt  README.md  flb_vector_serialization.cpp
flatbuffers_vector_binary_serialization/fb/: generate.sh
proto3_vector_binary_serialization/: CMakeLists.txt
proto3_vector_binary_serialization/proto/: generate.sh  vectors.pb.h
